# daedalus

./: .gitmodules  Cargo.toml  README.md  rocket.toml
docs/: test.md
src/: config.rs  db.rs  main.rs
src/services/: CAN.rs  docs.rs  hive.rs  media.rs  mod.rs  temperature.rs  tempurature.rs
src/services/docs/: fs.rs  mod.rs
src/services/time/: mod.rs
