[package]
name = "daedalus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3" , features = ["json"] }
rusqlite = "0.29.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
chrono = {version  ="0.4.26", features = ["serde"] }




[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
